// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dropdown/> should click item 1`] = `undefined`;

exports[`<Dropdown/> should render with default props and border left none 1`] = `
<div>
  <div
    class="StyledDropdown__Wrapper-sc-1btfu08-0 jnKrhx"
    height="2.488rem"
  >
    <button
      aria-controls="dropdown1"
      aria-haspopup="true"
      aria-selected="true"
      class="StyledDropdown__Activator-sc-1btfu08-1 jVWbcI"
      data-testid="dropdown-activator"
      id="dropdown-activator"
      type="button"
    >
      <div
        class="StyledHideable-sc-6qajv2-0 dyQeGA"
      >
        <span
          class="activator-text"
        >
          Buscar por...
        </span>
      </div>
      <img
        alt=""
        class="activator-icon"
      />
    </button>
    <div
      aria-label="Configuraciones"
      class="StyledDropdown__ItemsContainer-sc-1btfu08-2 beJxQA"
      data-cy="dropdown-itemList"
      data-testid="dropdown-itemList"
      id="dropdown1"
    />
  </div>
</div>
`;

exports[`<Dropdown/> should render with default props and borders 1`] = `
<div>
  <div
    class="StyledDropdown__Wrapper-sc-1btfu08-0 jnKrhx"
    height="2.488rem"
  >
    <button
      aria-controls="dropdown1"
      aria-haspopup="true"
      aria-selected="true"
      class="StyledDropdown__Activator-sc-1btfu08-1 gPTejF"
      data-testid="dropdown-activator"
      id="dropdown-activator"
      type="button"
    >
      <div
        class="StyledHideable-sc-6qajv2-0 dyQeGA"
      >
        <span
          class="activator-text"
        >
          Buscar por...
        </span>
      </div>
      <img
        alt=""
        class="activator-icon"
      />
    </button>
    <div
      aria-label="Configuraciones"
      class="StyledDropdown__ItemsContainer-sc-1btfu08-2 beJxQA"
      data-cy="dropdown-itemList"
      data-testid="dropdown-itemList"
      id="dropdown1"
    />
  </div>
</div>
`;
